--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grayish_blue1"
+    android:background="@drawable/gradient_background"
     tools:context=".Bookings.BookDetails">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -69,37 +69,37 @@
                     android:id="@+id/tvcdBmyBook"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:text="Brand Model Year"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/dark_blue1"
-                    android:textSize="20dp"
+                    android:textSize="22dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvcdLocationBook"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:text="Location"
                     android:fontFamily="@font/poppins_regular"
                     android:textColor="@color/dark_blue1"
-                    android:textSize="15dp" />
+                    android:textSize="18dp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
+                    android:paddingLeft="40dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:text="₱ "
+                        android:text="Php "
                         android:fontFamily="@font/poppins_regular"
                         android:textColor="@color/violet"
-                        android:textSize="15dp" />
+                        android:textSize="16dp" />
 
                     <TextView
                         android:id="@+id/tvcdPricingBook"
@@ -130,8 +130,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/top_bot_border"
@@ -142,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:text="CAR SPECS"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -151,6 +151,8 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginTop="15dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
                         android:gravity="center">
 
                         <LinearLayout
@@ -227,15 +229,16 @@
 
                         </LinearLayout>
 
-
-
                     </LinearLayout>
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
                         android:layout_marginTop="20dp">
 
 
@@ -250,8 +253,7 @@
                                 android:layout_height="47dp"
                                 android:layout_gravity="center"
                                 android:src="@drawable/type"
-                                android:scaleType="fitCenter"
-                                />
+                                android:scaleType="fitCenter" />
 
                             <TextView
                                 android:id="@+id/tvTypeBook"
@@ -299,8 +301,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/bottom_border"
@@ -311,7 +313,7 @@
                         android:layout_height="wrap_content"
                         android:text="DISTANCE PER DAY"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -338,8 +340,8 @@
                     android:id="@+id/llDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="20dp"
-                    android:paddingLeft="20dp"
+                    android:paddingRight="40dp"
+                    android:paddingLeft="40dp"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp"
                     android:background="@drawable/bottom_border"
@@ -350,7 +352,7 @@
                         android:layout_height="wrap_content"
                         android:text="DESCRIPTION"
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textColor="@color/dark_blue1"
                         android:textStyle="bold"/>
 
@@ -380,10 +382,10 @@
                         android:layout_height="wrap_content"
                         android:text="HOSTED BY: "
                         android:fontFamily="@font/poppins_regular"
-                        android:textSize="13sp"
+                        android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/dark_blue1"
-                        android:layout_marginLeft="20dp"/>
+                        android:layout_marginLeft="40dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -396,7 +398,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             app:cardCornerRadius="30dp"
-                            android:layout_marginLeft="20dp">
+                            android:layout_marginLeft="40dp">
 
                             <ImageView
                                 android:id="@+id/ivHostBook"
@@ -425,8 +427,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal"
                     android:gravity="center"
@@ -440,8 +442,8 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
-                            android:text="₱ "
+                            android:layout_marginBottom="5dp"
+                            android:text="Php "
                             android:textColor="@color/dark_blue1"
                             android:textSize="20dp" />
 
@@ -449,16 +451,17 @@
                             android:id="@+id/tvPriceBook"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginBottom="5dp"
                             android:text="Price"
                             android:fontFamily="@font/poppins_regular"
                             android:textColor="@color/dark_blue1"
+                            android:textStyle="bold"
                             android:textSize="20dp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="10dp"
+                            android:layout_marginBottom="5dp"
                             android:text="/day"
                             android:fontFamily="@font/poppins_regular"
                             android:textColor="@color/dark_blue1"
