--- a/app/src/main/res/layout/booked_item.xml
+++ b/app/src/main/res/layout/booked_item.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="15dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp"
-    android:backgroundTint="@color/grayish_blue1">
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="15dp"
+    android:backgroundTint="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="140dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:layout_width="170dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp">
 
             <ImageView
                 android:id="@+id/ivbCarImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_profile"/>
+                android:src="@drawable/ic_profile" />
 
         </androidx.cardview.widget.CardView>
 
@@ -31,23 +35,28 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingLeft="5dp"
+            android:paddingLeft="20dp"
             android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tvbBmy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Brand Model year"
-                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:textColor="@color/dark_blue1"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/tvbLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Location"
-                android:textSize="13dp"
-                android:textColor="@color/black"/>
+                android:textSize="14dp"
+                android:textColor="@color/dark_blue1"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,38 +65,64 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₱"
-                    android:textSize="13dp"
-                    android:textColor="@color/black"/>
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Php "
+                    android:textSize="14dp"
+                    android:textColor="@color/violet"/>
                 <TextView
                     android:id="@+id/tvbPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/poppins_regular"
                     android:text="Price"
-                    android:textSize="13dp"
-                    android:textColor="@color/black"/>
+                    android:textSize="14dp"
+                    android:textColor="@color/violet"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/poppins_regular"
                     android:text="/day"
-                    android:textSize="13dp"
-                    android:textColor="@color/black"/>
+                    android:textSize="14dp"
+                    android:textColor="@color/dark_blue1"/>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvbHost"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hosted by"
-                android:textSize="13dp"
-                android:textColor="@color/black"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Hosted by "
+                    android:textSize="13dp"
+                    android:textColor="@color/dark_blue1"/>
+
+                <TextView
+                    android:id="@+id/tvbHost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="Hosted by"
+                    android:textSize="13dp"
+                    android:textColor="@color/dark_blue1"/>
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/tvbookDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
                 android:text="Book date"
                 android:textSize="12dp"
-                android:textColor="@color/black"/>
+                android:textColor="@color/violet"/>
 
         </LinearLayout>
 
